--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 .main-container {
-
+	position: relative;
 }
 
 .field {
@@ -11,14 +11,21 @@
 .title {
 	position: flex;
 	margin: auto;
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: 700;
+}
+
+.title-mess {
+	margin: 5px;
 }
 
 .field-wrap {
 	margin: auto;
-	margin-top: 10px;
+	margin-top: 5px;
 	text-align: center;
+	position: relative;
+	height: 100%;
+	width: 100%;
 }
 
 .field-row {
@@ -32,11 +39,9 @@
 	background-image: url('../img/hole.png');
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 20vh;
-	width: 20vh;
-	margin: 10px;
-	min-height: 56px;
-	min-width: 56px;
+	height: 20vmin;
+	width: 20vmin;
+	margin: 3px;
 	cursor: url('../img/hammer.png'), pointer;
 }
 
@@ -44,3 +49,64 @@
 	background-image: url('../img/goblin.png');
 }
 
+.new-game {
+	background-color: #00FF00;
+	padding: 10px 30px;
+	border: none;
+	font-weight: 700;
+	font-size: 18px;
+	box-shadow: 0px 0px 3px 1px gray;
+	border-radius: 5px;
+	margin: 10px;
+}
+
+.new-game:hover {
+	background-color: #00F000;
+	cursor: pointer;
+	box-shadow: 0px 0px 4px 2px gray;
+}
+
+.hidden-item {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.gameover-wrap {
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	font-weight: 700;
+	font-size: 20px;
+	padding: 5px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
+
+}
+
+.gameover-mess {
+	position: relative;
+	z-index: 5;
+}
+
+.gameover-wrap::before {
+	content: '';
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255, 255, 255, 0.9);
+	z-index: 1;
+	box-shadow: 0px 0px 5px 5px #00FF00;
+}
+
+.new-game-modal {
+	z-index: 10;
+}
